--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <img src="images/chef.jpg" alt="picture of chef">
         
+        <h3>Delicious Breakfast</h3>
         <ul>
         <li><a href="recipes/pancakes.html">Old Fashioned Pancakes</a> </li>
         <li><a href="recipes/breakfast-tacos.html">Mexican Breakfast Tacos</a></li>
+        <li><a href="recipes/quinoa.html">Blueberry Lemon Breakfast Quinoa</a> </li>
 
         </ul>
      
